samples/OK/return.php
<?php
declare(strict_types=1);
function b() : float
{
    return 3.3;
}
$a = b();
return;
?>
